--- a/views/welcome.html
+++ b/views/welcome.html
@@ -6,5 +6,6 @@
     <body>
         <h2>Welcome :)</h2>
         <p>Click <a href="/sign-in">here</a> to go back to the Sign-in page</p>
+        <p>Click <a href="/create-user">here</a> to go back to the Create User page</p>
     </body>
 </html>
